plugins {
    id 'java'
    id 'org.springframework.boot' version "$springBootVersion"
    id 'io.spring.dependency-management' version "$springBootependencyManagementVersion"
    id 'org.openapi.generator' version "${openapiGeneratorVersion}"
    id 'jacoco'
}

group = 'pl.zajavka'
version = '0.0.1-SNAPSHOT'
java {
    sourceCompatibility = '21'
}
configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}


repositories {
    mavenCentral()
}
jacoco {
    toolVersion = "0.8.11"
    reportsDirectory = layout.buildDirectory.dir('flavour-compass-tests')
}
dependencies {

    //spring
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:3.3.0'
    implementation 'junit:junit:4.13.1'
    implementation 'org.apache.commons:commons-csv:1.10.0'



    //uploadImages
    implementation "com.cloudinary:cloudinary-http44:$cloudinaryVersion"
    implementation "com.cloudinary:cloudinary-taglib:$cloudinaryVersion"
    implementation 'io.github.cdimascio:java-dotenv:5.2.2'

    //annotations
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation "org.mapstruct:mapstruct:$mapstructVersion"
    annotationProcessor "org.mapstruct:mapstruct-processor:$mapstructVersion"
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'



    //api
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springDocOpenApiVersion}"


    //db
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.flywaydb:flyway-core'
    runtimeOnly 'com.h2database:h2'

    //test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test:6.2.2'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
}

//openApiGenerate {
//    generatorName = "java"
//    library = "webclient"
//    configOptions = [
//            serializableModel: "true",
//            dateLibrary: "java8",
//            serializationLibrary: "jackson"
//    ]
//
////    outputDir = "/generated-sources/openapi".toString()
////    inputSpec = "$rootDir/src/main/resources/contracts/api-1.0.0.json".toString()
////    apiPackage = "pl.zajavka.infrastructure.FC.api"
////    modelPackage = "pl.zajavka.infrastructure.FC.model"
//}
////
//sourceSets {
//    main {
//        java.srcDirs += "$buildDir/generated-sources/openapi/src/main/java"
//    }
//}


//compileJava.dependsOn tasks.openApiGenerate
jacocoTestReport {
    reports {
        xml.required = false
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir('flavour-compass-tests')
    }
}
test {
    finalizedBy jacocoTestReport // report is always generated after tests run
}
jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
}
tasks.named('test') {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

compileJava.options.encoding = 'UTF-8'
